# fakenews-detector

./: Dockerfile  README.md  fakenews_env.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py
server/: app.py
