[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fakenews-detector-openenv"
version = "1.0.0"
description = "FakeNews Detector OpenEnv"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.9.2",
    "requests==2.32.3",
    "google-generativeai==0.8.3",
    "tavily-python==0.5.0",
    "pyyaml==6.0.2",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"
